--- a/style/main.css
+++ b/style/main.css
@@ -100,7 +100,7 @@
     text-decoration: none;
     list-style: none;
     display: inline;
-    margin: 0px;
+    margin-left: 50px;
     padding: 0;
 }
 #social ul {
