--- a/style/main.css
+++ b/style/main.css
@@ -267,39 +267,52 @@ img {
   Contact
   ========================================
 */
+
 form {
-    margin: 0 auto;
-    width: 400px;
-    padding: 1em;
-    border: 1px solid #CCC;
-    border-radius: 1em;
-}
-form div + div {
-    margin-top: 1em;
+	width:459px;
+	margin:0 auto;
 }
 label {
-    display: inline-block;
-    width: 90px;
-    text-align: right;
+	display:block;
+	margin-top:20px;
+	letter-spacing:2px;
 }
 input, textarea {
-    font: 0.8em sans-serif;
-    width: 300px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    border: 1px solid #268bd2;
+	width:439px;
+	height:27px;
+	background:#efefef;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border:1px solid #dedede;
+	padding:10px;
+	margin-top:3px;
+	font-size:0.9em;
+	color:#3a3a3a;
 }
-input:focus, textarea:focus {
-    border-color: #000;
-}
+
 textarea {
-    vertical-align: top;
-    height: 5em;
-    resize: vertical;
+	height:213px;
+	font-family:Arial, Helvetica, sans-serif;
 }
-.button {
-    padding-left: 90px;
+#submit {
+	background-color: #268bd2;
+    color: white;
+	width:127px;
+	height:45px;
+	border:none;
+	margin-top:20px;
+	cursor:pointer;
 }
-button {
-    margin-left: .5em;
+#submit:hover {
+		opacity:0.7;
+}
+input, textarea,
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+    font-size: 12px;
+}
+.output {
+    color: red;
+    margin-top: 20px;
 }
