--- a/style/main.css
+++ b/style/main.css
@@ -271,6 +271,12 @@ img {
 form {
 	width:459px;
 	margin:0 auto;
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding: 15px;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 label {
 	display:block;
